<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="32dp"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <!-- View Title Label -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/login_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <!-- Name TextField -->
        <EditText
            android:id="@+id/input_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="Enter your Username"/>


        <!-- Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/pwd" />

        <!-- Password TextField -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword" />

        <!-- Error message -->
        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#ff6347"
            android:text="@string/btnLogin_login"
            android:textColor="#fff" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/button_link_to_register_screen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@null"
            android:text="@string/btnRegister_login"
            android:textColor="#228b22"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            />

        <!-- register as guest -->
        <Button
            android:id="@+id/button_register_as_guest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/btnRegisterAsGuest_login"
            android:textColor="#228b22"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            />




    </LinearLayout>

</ScrollView>